Fix execution counts in BMI workflow notebook and remove unnecessary whitespace. Delete simple LLM workflow notebook to streamline project structure.

--- a/my_project/2_simple_llm_workflow.ipynb
+++ b/my_project/2_simple_llm_workflow.ipynb
@@ -38,15 +38,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 1,
    "id": "41de4905",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Both GOOGLE_API_KEY and GEMINI_API_KEY are set. Using GOOGLE_API_KEY.\n"
+     "ename": "NameError",
+     "evalue": "name 'ChatGoogleGenerativeAI' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m model = \u001b[43mChatGoogleGenerativeAI\u001b[49m(model=\u001b[33m\"\u001b[39m\u001b[33mgemini-2.5-flash\u001b[39m\u001b[33m\"\u001b[39m, google_api_key=os.getenv(\u001b[33m\"\u001b[39m\u001b[33mGOOGLE_API_KEY\u001b[39m\u001b[33m\"\u001b[39m))\n",
+      "\u001b[31mNameError\u001b[39m: name 'ChatGoogleGenerativeAI' is not defined"
      ]
     }
    ],
