--- a/my_project/1_bmi_workflow.ipynb
+++ b/my_project/1_bmi_workflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "dc90953b",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "c763d2d0",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "ca5eecf0",
    "metadata": {},
    "outputs": [],
@@ -55,37 +55,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "27df9d7c",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Define graph\n",
-    "\n",
     "graph = StateGraph(BMIState)\n",
     "\n",
     "# add nodes to graph\n",
-    "\n",
     "graph.add_node(\"calculate_bmi\", calculate_bmi)\n",
     "\n",
-    "\n",
     "# add edges to graph\n",
-    "\n",
     "graph.add_edge(START, \"calculate_bmi\")\n",
     "\n",
-    "\n",
-    "\n",
     "# compile the graph\n",
-    "\n",
-    "workflow = graph.compile()\n",
-    "\n",
-    "\n",
-    "\n"
+    "workflow = graph.compile()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "36d3e962",
    "metadata": {},
    "outputs": [
