--- a/my_project/2_simple_llm_workflow.ipynb
+++ b/my_project/2_simple_llm_workflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "eaf366d3",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "ad14701b",
    "metadata": {},
    "outputs": [
@@ -27,7 +27,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "41de4905",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "cec10a19",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "a4e55787",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "0eac48ed",
    "metadata": {},
    "outputs": [],
@@ -105,22 +105,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "327e115a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'question': 'What is the capital of France?', 'answer': 'The capital of France is **Paris**.'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# excute\n",
     "\n",
-    "intial_state = {'question': 'What is the capital of France?'}\n",
+    "intial_state = {'question': 'What is the capital of pakistan?'}\n",
     "\n",
     "final_state = workflow.invoke(intial_state)\n",
     "\n",
@@ -130,7 +122,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "my-project (3.13.2)",
    "language": "python",
    "name": "python3"
   },
